crates/scribe-core/tests/snapshots/template__a_template_can_take_values_of_its_own.snap
---
source: crates/scribe-core/tests/template.rs
expression: "render(\"hocr\", Options::new().with(\"var.title\", \"A tilted <page>\"))"
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
  <head>
    <title>A tilted &lt;page&gt;</title>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
    <meta name="ocr-system" content="scribe" />
    <meta name="ocr-capabilities" content="ocr_page ocr_line ocrx_word" />
  </head>
  <body>
    <div class="ocr_page" id="page_1" title="bbox 0 0 284 140; image &quot;page.png&quot;">
      <span class="ocr_line" id="line_1" title="bbox 28 31 256 63">
        <span class="ocrx_word" id="word_1_1" title="bbox 28 31 126 63; x_wconf 99">Hello</span>
        <span class="ocrx_word" id="word_1_2" title="bbox 143 31 256 63; x_wconf 97">World</span>
      </span>
      <span class="ocr_line" id="line_2" title="bbox 30 75 250 125">
        <span class="ocrx_word" id="word_2_1" title="bbox 30 75 122 107; x_wconf 88">Tilted</span>
        <span class="ocrx_word" id="word_2_2" title="bbox 127 88 141 110; x_wconf 62">&amp;</span>
        <span class="ocrx_word" id="word_2_3" title="bbox 149 91 250 125; x_wconf 91">&lt;set&gt;</span>
      </span>
    </div>
  </body>
</html>
