crates/scribe-core/tests/snapshots/template__alt_text.snap
---
source: crates/scribe-core/tests/template.rs
expression: "render(\"alt-text\", Options::new())"
---
Hello World Tilted & <set>
