crates/scribe-core/tests/snapshots/template__an_overlays_names_can_be_settled_by_the_page.snap
---
source: crates/scribe-core/tests/template.rs
expression: "render(\"html-overlay\",\nOptions::new().with(\"var.scope_mode\", \"fixed\").with(\"var.scope\", \"left\"))"
---
<div class="scribe-left-overlay">
  <style>
    .scribe-left-overlay { position: relative; display: inline-block; line-height: 0; color-scheme: light dark }
    .scribe-left-overlay img { display: block; max-width: 100% }
    .scribe-left-overlay span { position: absolute; color: transparent; white-space: pre; line-height: 1; transform-origin: center }
    .scribe-left-overlay span::selection { color: HighlightText; background: color-mix(in srgb, Highlight 35%, transparent) }
  </style>
  <img src="page.png" width="284" height="140" alt="Hello World Tilted &amp; &lt;set&gt;" />
  <span style="left: 28px; top: 31px; width: 98px; height: 32px; font-size: 32px; transform: rotate(0deg)">Hello</span>
  <span style="left: 143px; top: 31px; width: 113px; height: 32px; font-size: 32px; transform: rotate(0deg)">World</span>
  <span style="left: 30.63px; top: 80.95px; width: 90px; height: 20px; font-size: 20px; transform: rotate(8deg)">Tilted</span>
  <span style="left: 128.06px; top: 89.16px; width: 12px; height: 20px; font-size: 20px; transform: rotate(8deg)">&amp;</span>
  <span style="left: 149.42px; top: 98.35px; width: 100px; height: 20px; font-size: 20px; transform: rotate(8deg)">&lt;set&gt;</span>
</div>
